fix overflowing comment bug

--- a/app/assets/stylesheets/styles/photo_show.scss
+++ b/app/assets/stylesheets/styles/photo_show.scss
@@ -101,6 +101,7 @@
 .sub-photo-view-container {
   width: 100%;
   // background-color: #f3f5f6;
+  height: 100%;
 
   .sub-photo-center-content {
     display: flex;
