--- a/app/assets/stylesheets/styles/user_profile.scss
+++ b/app/assets/stylesheets/styles/user_profile.scss
@@ -1,7 +1,7 @@
 .user-profile-wrapper {
   position: relative;
   box-sizing: border-box;
-  height: 100%;
+  height: 100vh;
   margin: auto;
   overflow-y: scroll;
   z-index: -5;
